# oros-dev

./: Cargo.toml  README.md  build.rs  run_uefi_qemu.sh  x86_64-oros.json
.cargo/: config.toml
iso/boot/grub/: grub.cfg
kernel/: Cargo.toml  README.md  x86_64-oros.json
kernel/.cargo/: config.toml
kernel/src/: init.rs  lib.rs  main.rs  test_utils.rs
kernel/src/interrupts/: gdt.rs  idt.rs  mod.rs
kernel/src/memory/: allocator.rs  bump.rs  frame.rs  mod.rs
kernel/src/port/: mod.rs
kernel/src/screen/: buffer.rs  macros.rs  mod.rs  vga.rs
kernel/src/task/: mod.rs
kernel/src/vga/: color.rs
kernel/tests/: basic_boot.rs  stack_overflow.rs  test_skeleton.txt
src/: allocator.rs  init.rs  lib.rs  main.rs  memory.rs  test_utils.rs  vga.rs
src/interrupts/: gdt.rs  handlers.rs  idt.rs  mod.rs  pic.rs
src/memory/: allocator.rs  bump.rs  fixed.rs  frame.rs  linked_list.rs  mod.rs
src/port/: mod.rs  num.rs  serial.rs
src/task/: executor.rs  keyboard.rs
src/vga/: macros.rs  mod.rs  writer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  test_skeleton.txt
