[package]
name = "oros-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.2.0", default-features = false }
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false